python-debian (0.1.17) UNRELEASED; urgency=low

  [ James Westby ]
  * Use os.path.normpath to hide python version differences

 -- John Wright <jsw@debian.org>  Fri, 25 Jun 2010 11:20:22 -0600

python-debian (0.1.16) unstable; urgency=low

  * debian_support: Be more careful in case apt_pkg is not available
    - If apt_pkg is not available, AptPkgVersion now raises
      NotImplementedError on any initialization attempt
    - test_debian_support.py now doesn't try to test AptPkgVersion if
      apt_pkg is not available
  * test_deb822.py: Don't test gpg info if debian-keyring is not
    available (Closes: #573934)
  * Use the warnings system to report deprecation warnings
    (Closes: #573945)
  * Change examples and control file to refer to debian instead of
    debian_bundle

 -- John Wright <jsw@debian.org>  Mon, 15 Mar 2010 20:02:17 -0600

python-debian (0.1.15) unstable; urgency=low

  [ John Wright ]
  * deb822: Don't ignore leading newlines on field data with apt_pkg
    (Closes: #466753)
  * changelog: Consistently parse different types of inputs.  The
    previous implementation added extra newlines when given a file
    object as input, rather than the result of str.splitlines().
    (Closes: #539316)
  * deb822: Faster non-shared storage by keeping a TagFile object
    around for each Deb822 object yielded

  [ Stefano Zacchiroli ]
  * make debian_support.Version hashable, patch from Piotr Ożarowski
    (Closes: #543223)

  [ Filippo Giunchedi ]
  * changelog: add iterator over changelog blocks (Closes: #539334)
  * changelog: split tests into tests/test_changelog.py for consistency

  [ John Wright ]
  * deb822: Use the apt_pkg.TagFile class instead of apt_pkg.ParseTagFile()
    (Closes: #552190)
  * test_deb822.py: Update to support new gpg "SIG_ID" algorithm
  * deb822: Better support for non-ascii values.  Deb822 objects now
    always contain unicode objects instead of strings.  Use the encoding