@@ -3,6 +3,9 @@ python-debian (0.1.17) UNRELEASED; urgency=low
   [ James Westby ]
   * Use os.path.normpath to hide python version differences
 
+  [ John Wright ]
+  * test_deb822.py: Make test_gpg_info more robust
+
  -- John Wright <jsw@debian.org>  Fri, 25 Jun 2010 11:20:22 -0600
 
 python-debian (0.1.16) unstable; urgency=low
